--- a/inda.css
+++ b/inda.css
@@ -85,8 +85,8 @@ a{
 }
 
 .letter h5{
-    background-color: black;
-    color: white;
+    background-color: red;
+    color: black;
     border-radius: 15px;
     width: 4%;
     padding: 10px 20px;
@@ -174,6 +174,81 @@ a{
     letter-spacing: 1px;
 }
 
+.section1bag{
+    background-color: red;
+}
+
+.section1{
+    background-image: radial-gradient(circle at 50% 50%,#737373,#000 100%);
+    border-radius: 0 0 0 200px;
+    display: flex;
+    align-items: center;
+    color: white;
+    height: 50vh;
+    /* transform: translateY(60%); */
+    /* transform: translate(13%, 80%); */
+    margin-top: 25px;
+    width: 80%;
+    justify-content: space-between;
+    border: 3px solid red;
+    cursor: pointer;
+    /* box-shadow: ; */
+
+}
+
+.casimg img{
+    margin-left: 73% !important;
+    margin-top: 4px;
+}
+
+.bag{
+    background-color: red;
+    width: 90%;
+    margin-left: 5%;
+}
+.sectinfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 90px;
+}
+.sectinfo1{
+    display: flex;
+    gap: 10px;
+    font-size: 30px;
+}
+.sectinfo1 :nth-child(2){
+    color: red;
+}
+
+.sectinfo2{
+    display: flex;
+    gap: 10px;
+    padding: 15px 0;
+}
+.sectinfo2 :nth-child(1){
+    color: red;
+}
+
+.contentcreation h1{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    font-size: 30px;
+}
+
+.starcont{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+.starcont1{
+    display: flex;
+    justify-content: center;
+    margin-top: 17%;
+    font-size: 20px;
+}
+
 @media (max-width: 900px){
     .hero{
         height: 30vh;
@@ -210,7 +285,67 @@ a{
         right: 52%;
     
     }
+    .section1{
+        border-radius: 0 0 0 0px;
+        display: flex;
+        align-items: center;
+        flex-direction: column-reverse;
+        color: white;
+        height: 72vh;
+        /* transform: translateY(60%); */
+        /* transform: translate(13%, 80%); */
+        margin-top: 90%;
+        width: 100%;
+        font-size: 10px;
+        justify-content: center;
+        cursor: pointer;
+    }
     
+.bag{
+    background-color: white;
+    width: 90%;
+    margin-left: 5%;
+}
+.casimg img{
+    margin-left: 1% !important;
+    margin-top: 4px;
+    width: 80vw !important;
+    height: 43vh !important;
+}
+.sectinfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 0;
+}
+.sectinfo1{
+    font-size: 15px;
+}
+.sectinfo2{
+    display: flex;
+    gap: 10px;
+    font-size: 10px;
+    padding: 5px 0;
+}
+.starcont1{
+    display: flex;
+    justify-content: center;
+    margin-top: 15%;
+    font-size: 10px;
+}
+.starcont{
+    display: flex;
+    justify-content: center;
+    font-size: 10px;
+}
+
+.contentcreation h1{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    font-size: 20px;
+}
 }
 
 @media (max-width: 760px){
