--- a/inda.css
+++ b/inda.css
@@ -13,6 +13,14 @@ a{
     text-decoration: none;
 }
 
+.fade-in{
+    opacity: 0;
+    transition: opacity 500ms ease-in;
+}
+.fade-in.appear{
+    opacity: 1;
+}
+
 .nav{
     display: flex;
     justify-content: space-between;
@@ -62,20 +70,44 @@ a{
     padding-top: 30px;
     display: flex;
     justify-content: space-between;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translateY(10%);
+    opacity: 0;
+}
+
+.hero-info.appear{
+    transform: translateY(0);
+    opacity: 1;
 }
 
 .hero-division{
     width: 50%;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatex(-30%);
+    opacity: 0;
+    background-color: white;
 }
 
+.hero-division.appear{
+    transform: translateY(0);
+    opacity: 1;
+}
 .me{
     width: 35%;
-    transform: translateY(-30px);
+    margin-top: -30px;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatex(30%);
+    opacity: 0;
 }
 
 .me img{
     width: 100%;
     height: 60vh;
+}
+
+.me.appear{
+    transform: translatex(0);
+    opacity: 1;
 }
 .letter{
     display: flex;
@@ -196,9 +228,20 @@ a{
 
 }
 
+.casimg{
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatex(30%);
+    opacity: 0;
+}
+
+.casimg.appear{
+    transform: translateX(0);
+    opacity: 1;
+}
 .casimg img{
     margin-left: 73% !important;
     margin-top: 4px;
+
 }
 
 .bag{
@@ -211,6 +254,13 @@ a{
     flex-direction: column;
     justify-content: center;
     padding-left: 90px;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatex(-30%);
+    opacity: 0;
+}
+.sectinfo.appear{
+    transform: translateX(0);
+    opacity: 1;
 }
 .sectinfo1{
     display: flex;
@@ -249,6 +299,234 @@ a{
     font-size: 20px;
 }
 
+.section2{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 10px;
+
+}
+
+.flip-box {
+    /* background-color: transparent; */
+    width: 350px;
+    height: 250px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+}
+.flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+
+  .flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
+  }
+  
+  .flip-box-front {
+    background:linear-gradient(to top, rgba(0,0,0,0.7)50%,rgba(0,0,0,0.7)50%), url(./image/121452320.jpg);
+    background-size: cover;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .flip-box-back {
+    color: white;
+    transform: rotateY(180deg);
+    background:linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%), url(./image/121452320.jpg);
+    display: flex;
+    align-items: center;
+    background-size: cover;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .flip-box:hover .flip-box-inner {
+    transform: rotateX(180deg);
+  }
+  
+  .flip-box-back {
+    transform: rotateX(180deg);
+    
+  }
+.flip-box2 {
+    /* background-color: transparent; */
+    width: 350px;
+    height: 250px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+}
+.flip-box2-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+
+  .flip-box2:hover .flip-box2-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box2-front, .flip-box2-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
+  }
+  
+  .flip-box2-front {
+    background:linear-gradient(to top, rgba(0,0,0,0.7)50%,rgba(0,0,0,0.7)50%), url(./image/-1523184371.jpg);
+    background-size: cover;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .flip-box2-back {
+    color: white;
+    transform: rotateY(180deg);
+    background:linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%), url(./image/-1523184371.jpg);
+    display: flex;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .flip-box2:hover .flip-box2-inner {
+    transform: rotateX(180deg);
+  }
+  
+  .flip-box2-back {
+    transform: rotateX(180deg);
+    
+  }
+  .side-nav-sub2{
+    background-color: transparent;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+}
+  .side-nav-sub3{
+    background-color: transparent;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+}
+
+.side-nav-sub3:hover{
+    background-color: purple;
+    color: white;
+    border: none;
+}
+.flip-box3 {
+    /* background-color: transparent; */
+    width: 350px;
+    height: 250px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+}
+.flip-box3-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+
+  .flip-box3:hover .flip-box3-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box3-front, .flip-box3-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
+  }
+  
+  .flip-box3-front {
+    background:linear-gradient(to top, rgba(0,0,0,0.7)50%,rgba(0,0,0,0.7)50%), url(./image/-1412419259.jpg);
+    background-size: cover;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .flip-box3-back {
+    color: white;
+    transform: rotateY(180deg);
+    background:linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%), url(./image/-1412419259.jpg);
+    display: flex;
+    align-items: center;
+    background-size: cover;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .flip-box3:hover .flip-box3-inner {
+    transform: rotateX(180deg);
+  }
+  
+  .flip-box3-back {
+    transform: rotateX(180deg);
+    
+  }
+  .side-nav-sub3{
+    background-color: transparent;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+}
+  .side-nav-sub4{
+    background-color: transparent;
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+}
+
+.side-nav-sub2:hover{
+    background-color: red;
+    border: none;
+}
+.side-nav-sub4:hover{
+    background-color: blue;
+    border: none;
+}
+  
 @media (max-width: 900px){
     .hero{
         height: 30vh;
@@ -291,13 +569,12 @@ a{
         align-items: center;
         flex-direction: column-reverse;
         color: white;
-        height: 72vh;
-        /* transform: translateY(60%); */
-        /* transform: translate(13%, 80%); */
-        margin-top: 90%;
+        height: 65vh;
+        margin-top: 30%;
         width: 100%;
         font-size: 10px;
         justify-content: center;
+        gap: 10px;
         cursor: pointer;
     }
     
@@ -309,8 +586,8 @@ a{
 .casimg img{
     margin-left: 1% !important;
     margin-top: 4px;
-    width: 80vw !important;
-    height: 43vh !important;
+    width: 70vw !important;
+    height: 40vh !important;
 }
 .sectinfo{
     display: flex;
@@ -320,32 +597,39 @@ a{
     padding-left: 0;
 }
 .sectinfo1{
-    font-size: 15px;
+    font-size: 43px;
 }
 .sectinfo2{
     display: flex;
     gap: 10px;
-    font-size: 10px;
+    font-size: 22px;
     padding: 5px 0;
 }
 .starcont1{
     display: flex;
     justify-content: center;
     margin-top: 15%;
-    font-size: 10px;
+    font-size: 15px;
 }
 .starcont{
     display: flex;
     justify-content: center;
-    font-size: 10px;
+    font-size: 25px;
 }
 
 .contentcreation h1{
     display: flex;
     justify-content: center;
-    margin-top: 30px;
-    font-size: 20px;
+    margin-top: 40px;
+    font-size: 50px;
 }
+.sectinfo P{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 15px;
+} 
 }
 
 @media (max-width: 760px){
@@ -412,4 +696,71 @@ a{
     .search H5{
         display: none;
     }
+    .section1{
+        border-radius: 0 0 0 0px;
+        display: flex;
+        align-items: center;
+        flex-direction: column-reverse;
+        color: white;
+        height: 72vh;
+        margin-top: 90%;
+        width: 100%;
+        font-size: 10px;
+        justify-content: center;
+        cursor: pointer;
+    }
+    
+.bag{
+    background-color: white;
+    width: 90%;
+    margin-left: 5%;
+}
+.casimg img{
+    margin-left: 1% !important;
+    margin-top: 4px;
+    width: 80vw !important;
+    height: 43vh !important;
+}
+.sectinfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 0;
+}
+.sectinfo1{
+    font-size: 15px;
+}
+.sectinfo2{
+    display: flex;
+    gap: 10px;
+    font-size: 10px;
+    padding: 5px 0;
+}
+.starcont1{
+    display: flex;
+    justify-content: center;
+    margin-top: 15%;
+    font-size: 10px;
+}
+.starcont{
+    display: flex;
+    justify-content: center;
+    font-size: 10px;
+}
+
+.contentcreation h1{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    font-size: 20px;
+}
+.section2{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: 10px;
+
+}
 }
