--- a/inda.css
+++ b/inda.css
@@ -313,6 +313,14 @@ a{
     height: 250px;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatey(-30%);
+    opacity: 0;
+}
+
+.flip-box.appear{
+    opacity: 1;
+    transform: translatey(0);
 }
 .flip-box-inner {
     position: relative;
@@ -371,6 +379,7 @@ a{
     border: 1px solid #f1f1f1;
     perspective: 1000px;
 }
+
 .flip-box2-inner {
     position: relative;
     width: 100%;
@@ -450,7 +459,16 @@ a{
     height: 250px;
     border: 1px solid #f1f1f1;
     perspective: 1000px;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatey(30%);
+    opacity: 0;
 }
+
+.flip-box3.appear{
+    opacity: 1;
+    transform: translateY(0);
+}
+
 .flip-box3-inner {
     position: relative;
     width: 100%;
@@ -526,7 +544,124 @@ a{
     background-color: blue;
     border: none;
 }
-  
+
+.container{
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    /* justify-content: center;
+    align-items: center; */
+    flex-wrap: wrap;
+    padding: 50px 0;
+    margin-left: 80px;
+}
+
+.drop{
+    position: relative;
+    width: 350px;
+    height: 350px;
+    box-shadow: inset 20px 20px 20px rgba(0,0,0,0.05), 25px 35px 20px rgba(0,0,0,0.05), 25px 30px 30px rgba(0,0,0,0.05),
+    inset -20px -20px 25px rgba(255, 255, 255, 0.9);
+    transition: 0.5s ease-in-out;
+}
+
+.drop:nth-child(1){
+    border-radius: 54% 46% 63% 37% / 46% 32% 68% 54% ;
+}
+.drop:nth-child(2){
+    border-radius: 33% 67% 25% 75% / 50% 35% 65% 50%  ;
+}
+.drop:nth-child(3){
+    border-radius: 70% 30% 25% 75% / 50% 43% 57% 50%  ;
+}
+
+.drop:hover{
+    border-radius: 50%;
+}
+
+.drop::before{
+    content: '';
+    position: absolute;
+    top: 50px;
+    left: 85px;
+    width: 35px;
+    height: 35px;
+    background-color: rgb(255, 254, 254);
+    border-radius: 50%;
+    opacity: 0.9;
+}
+.drop::after{
+    content: '';
+    position: absolute;
+    top: 90px;
+    left: 110px;
+    width: 15px;
+    height: 15px;
+    background-color: rgb(240, 239, 239);
+    border-radius: 50%;
+    opacity: 0.9;
+}
+.content{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 40px;
+    gap: 15px;
+}
+.content h2{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background-color: #eff0f4;
+    border-radius: 50%;
+    box-shadow: inset 2px 5px 10px rgba(0,0,0,0.1), inset -2px -5px 10px rgba(255, 255, 255,1), 15px 15px 10px rgba(0,0,0,0.05),
+    15px 10px 15px rgba(0, 0, 0, 0.025);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2em;
+    color: var(--clr);
+
+}
+
+.content a{
+    position: relative;
+    padding: 10px 25px;
+    background: var(---clr);
+    text-decoration: none;
+    color: white;
+    border-radius: 25px;
+    font-weight: 500;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+    opacity: 0.75;
+    transition: 0.5s;
+    background: var(--clr);
+}
+
+.content a:hover{
+    opacity: 1;
+}
+
+.content a::before{
+    content: '';
+    position: absolute;
+    left: 18%;
+    top: 5px;
+    width: 65%;
+    height: 5px;
+    border-radius: 5px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.5);
+    /* background: var(--clr); */
+}
+
+
+.content a::before:hover{
+    background-color: blue;
+}
 @media (max-width: 900px){
     .hero{
         height: 30vh;
@@ -630,6 +765,16 @@ a{
     flex-direction: column;
     font-size: 15px;
 } 
+.container{
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    /* justify-content: center;
+    align-items: center; */
+    flex-wrap: wrap;
+    padding: 50px 0;
+    margin-left: 80px;
+}
 }
 
 @media (max-width: 760px){
@@ -762,5 +907,15 @@ a{
     gap: 40px;
     margin-top: 10px;
 
+}
+.container{
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+    /* justify-content: center;
+    align-items: center; */
+    flex-wrap: wrap;
+    padding: 30px 0;
+    margin-left: 80px;
 }
 }
