--- a/inda.css
+++ b/inda.css
@@ -904,7 +904,7 @@ a{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 40px;
+    /* gap: 40px; */
     margin-top: 10px;
 
 }
@@ -916,6 +916,6 @@ a{
     align-items: center; */
     flex-wrap: wrap;
     padding: 30px 0;
-    margin-left: 80px;
+    margin-left: 0;
 }
 }
