--- a/inda.css
+++ b/inda.css
@@ -3,7 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 body{
+    width: 100vw;
     text-decoration: none;
     font-family: sans-serif;
 }
@@ -13,6 +15,37 @@ a{
     text-decoration: none;
 }
 
+/* .bouncing-title span:hover{
+    animation-name: bounce;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: 6;
+    display: inline-block;
+    cursor: pointer;
+} */
+
+.bounce {
+    animation-name: bounce;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: 6;
+    display: inline-block;
+    cursor: pointer;
+}
+@keyframes bounce{
+    20%, 50%, 80%, to{
+        transform:scale(1,1);
+    }
+    40%,45%{
+        transform: scale(1.75,0.65);
+    }
+    60%{
+        transform: scale(1.25,0.75);
+    }
+    90%{
+        transform: scale(1.15,0.85);
+    }
+}
 .fade-in{
     opacity: 0;
     transition: opacity 500ms ease-in;
@@ -765,16 +798,66 @@ a{
     flex-direction: column;
     font-size: 15px;
 } 
+.section2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 10px;
+
+}
+
+.flip-box {
+    /* background-color: transparent; */
+    width: 90%;
+    margin-left: 5%;
+    height: 250px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatey(-30%);
+    opacity: 0;
+}
+.flip-box2 {
+    /* background-color: transparent; */
+    width: 90%;
+    margin-left: 5%;
+    height: 250px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+}
+.flip-box3 {
+    /* background-color: transparent; */
+    width: 90%;
+    margin-left: 5%;
+    height: 250px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    transform: translatey(-30%);
+    opacity: 0;
+}
+
+.drop{
+    position: relative;
+    width: 90%;
+    margin-left: 5%;
+    height: 350px;
+    box-shadow: inset 20px 20px 20px rgba(0,0,0,0.05), 25px 35px 20px rgba(0,0,0,0.05), 25px 30px 30px rgba(0,0,0,0.05),
+    inset -20px -20px 25px rgba(255, 255, 255, 0.9);
+    transition: 0.5s ease-in-out;
+}
+
 .container{
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     /* justify-content: center;
     align-items: center; */
     flex-wrap: wrap;
     padding: 50px 0;
     margin-left: 80px;
 }
+
 }
 
 @media (max-width: 760px){
